2008-08-09  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/bandpass-gaussian.c:
	* operations/frequency/dft-backward.c: rename from idft.c
	* operations/frequency/dft-forward.c: rename from dft.c
	* operations/frequency/dft.c:
	* operations/frequency/gaussian-bandpass-filter.c: rename from bandpass-gaussian.c 
	* operations/frequency/gaussian-highpass-filter.c: rename from highpass-gaussian.c
	* operations/frequency/gaussian-lowpass-filter.c: rename from lowpass-gaussian.c
	* operations/frequency/gaussian-lowpass.c: a meta-operation wraping gaussian-lowpass filter.
	* operations/frequency/highpass-gaussian.c:
	* operations/frequency/idft.c:
	* operations/frequency/lowpass-gaussian.c:

2008-08-07  Zhang Junbo  <zhangjb@svn.gnome.org>
	
	* docs/gallery/lowpass-gaussian.xml: added
	* docs/gallery/highpass-gaussian.xml: added
	* docs/gallery/bandpass-gaussian.xml: added 
	* docs/gallery/data/lena.png: added

2008-08-04  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/filters.c: fixed a out of bound memory bug

2008-08-04  Zhang Junbo  <zhangjb@svn.gnome.org>
	
	* operations/frequency/tools/filters.c: a small optimizatoin

2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	add the document "frequency-domain-process-manual"

	* docs/frequency-domain-process-manual.txt: add a document.

2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	implemented gaussian band pass filter

	* operations/frequency/bandpass-gaussian.c: implemented gaussian band pass filter
	* operations/frequency/tools/filters.c: add gaussian band pass filter function

2008-08-03  Zhang Junbo  <zhangjb@svn.gnome.org>

	implemented gaussian high pass filter.

	* operations/frequency/highpass-gaussian.c: implemented gaussain high pass filter
	* operations/frequency/tools/filters.c: add gaussain high pass filter function

2008-08-02  Zhang Junbo  <zhangjb@svn.gnome.org>

	* operations/frequency/tools/filters.c (freq_multiply): modified the freq_multiply algorithm
