@@ -1,3 +1,8 @@
+2008-08-11  Zhang Junbo  <zhangjb@svn.gnome.org>
+
+	* frequency-domain-operation-document.txt: add  paragraph 3
+	* frequency-domain-process-manual.txt: renamed to frequency-domain-process-manual.txt
+
 2008-08-07  Zhang Junbo  <zhangjb@svn.gnome.org>
 
 	* gallery/bandpass_gaussian.xml:
